samples/chapter17/opa-gatekeeper/requiredlabels/example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    role: app
spec:
  containers:
    - name: nginx-container
      image: nginx:1.16
