samples/chapter17/opa-gatekeeper/requiredlabels/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pod-has-app-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    message: "All namespaces must have an `app` label"
    labels:
      - key: app
        allowedRegex: "^[a-zA-Z]+$"
